Fix IE Overflow
IE is awful and overflows on the X for some reason. Hopefully this doesn't break other things

--- a/source/assets/styles/setup/_utilities.scss
+++ b/source/assets/styles/setup/_utilities.scss
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .container {
   max-width: $page-width;
   margin: auto;
